egoNet expand/collapse problems resolved

--- a/inst/www/styles.css
+++ b/inst/www/styles.css
@@ -444,9 +444,10 @@ div.loading > p {
 }
 
 div.infopanel {
-  background: #f5f5f5;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
   padding: 20px;
-  border: 4px solid #888;
   overflow-y: auto;
   position: absolute;
   top: 10px;
@@ -461,8 +462,8 @@ div.infopanel .drag {
     cursor: w-resize;
 }
 div.infopanel .close-button {
-  font-size: 10px;
-  color: #666;
+  font-size: 20px;
+  color: #888;
   position: absolute;
   top: 6px;
   right: 10px;
